<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/profile"
            android:title="@string/user_profile" />
        <item
            android:id="@+id/upload"
            android:icon="@drawable/ic_upload"
            android:title="@string/menu_upload_notes" />
        <item
            android:id="@+id/download"
            android:icon="@drawable/ic_download"
            android:title="@string/menu_download_notes" />

        <item
            android:id="@+id/socialMedia"
            android:icon="@drawable/ic_people"
            android:title="@string/social_media" />


    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/logout"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
