<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/socialmedia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8B834F"
    tools:context=".ui.socialmedia.SocialMediaFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="160dp"
        android:background="#9ACC92"
        android:padding="4dp"
        android:scrollbars="vertical"

        />

    <EditText
        android:id="@+id/mediaName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="120dp"
        android:hint="@string/enter_social_media_name" />


    />

    <EditText
        android:id="@+id/url"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="70dp"
        android:textSize="15sp"
        android:hint="@string/enter_url" />

    <EditText
        android:id="@+id/edittext_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="25dp"
        android:inputType="number"
        android:hint="@string/insert_at"
        />

    <Button
        android:id="@+id/button_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/edittext_insert"
        android:layout_toEndOf="@id/edittext_insert"
        android:text="@string/insert" />

    <EditText
        android:id="@+id/edittext_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:inputType="number"
        android:layout_toRightOf="@+id/button_insert"
        android:hint="@string/remove_at"
        />

    <Button
        android:id="@+id/button_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/edittext_remove"
        android:layout_alignParentEnd="true"
        android:text="@string/remove" />
</RelativeLayout>
