<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluebackground"
    tools:context=".InfoActivity">


    <Button
        android:id="@+id/pickImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_profile_pic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />

    <!--
    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" /> -->
    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/logo"
        android:padding="7dp"
        android:scaleType="centerCrop"
        />

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/user_name"
        android:maxLength="25" />


    <EditText
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/your_info"
        android:maxLength="50" />

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        />

</RelativeLayout>